--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо</title>
-    <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
@@ -32,8 +32,8 @@
         />
       </a>
       <address class="address header__address">
-        <div><a href="tel:++99995555555">+9 999 555 5555</a></div>
-        <div><a href="info@sobaka.ge">info@sobaka.ge</a></div>
+        <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
+        <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
         <div>
           наб. Принсенграхт 263- <br />
           265, Амстердам
@@ -153,8 +153,8 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <div><a href="tel:++99995555555">+9 999 555 5555</a></div>
-        <div><a href="info@sobaka.ge">info@sobaka.ge</a></div>
+        <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
+        <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
         <div>
           наб. Принсенграхт 263- <br />
           265, Амстердам
@@ -175,12 +175,12 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#0">
             <img class="footer__social-icon" src="/images/yt.svg" alt="YouTube"
           /></a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
               src="/images/vk.svg"
@@ -188,7 +188,7 @@
           /></a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
               src="/images/pinterest.svg"
