--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__link_active">
-            <a class="header__link" href="#">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#">посмотреть лоты</a>
@@ -27,17 +27,14 @@
       <a class="header__logo" href="#">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип проекта"
         />
       </a>
       <address class="address header__address">
-        <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
-        <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
-        <div>
-          наб. Принсенграхт 263- <br />
-          265, Амстердам
-        </div>
+        <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
+        <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -61,7 +58,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">сделать ставку</button>
+          <button class="bet-button" type="button">сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -83,7 +80,7 @@
             >
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href=""
+            <a class="card-link" href="#"
               ><article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -120,50 +117,48 @@
         <a class="lots__look-more-link" href="">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about__column">
-          <div class="about__logo">
-            <img
-              class="about__logo-image"
-              src="/images/logo-white.svg"
-              alt="Логотип"
-            />
-          </div>
-
-          <h2 class="about__title">Об аукционе</h2>
-          <p class="about__text">
-            <span
-              >Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?</span
-            >
-            <span
-              >Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
-            </span>
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="/images/logo-white.svg"
+            alt="Логотип"
+          />
+        </div>
+        <h2 class="about__title">Об аукционе</h2>
+        <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
     </main>
     <footer class="footer">
       <address class="address">
-        <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
-        <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
-        <div>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>
           наб. Принсенграхт 263- <br />
           265, Амстердам
-        </div>
+        </p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item footer__menu-link_active">
-            <a class="footer__menu-link" href="#">Главная</a>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#"
+              >Главная</a
+            >
           </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#">Посмотреть лоты</a>
@@ -176,14 +171,14 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="YouTube"
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Ютюб"
           /></a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="ВКонтакте"
           /></a>
         </li>
@@ -191,8 +186,8 @@
           <a class="footer__social-link" href="#0">
             <img
               class="footer__social-icon"
-              src="/images/pinterest.svg"
-              alt="Pinterest"
+              src="./images/pinterest.svg"
+              alt="Пинтерест"
           /></a>
         </li>
       </ul>
