Внесены правки в проект

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
       </a>
       <address class="address header__address">
-        <p><a href="tel:+99995555555">+9 999 555 5555</a></p>
-        <p><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
+       <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -120,7 +120,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="Логотип"
           />
         </div>
@@ -149,7 +149,7 @@
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
-          наб. Принсенграхт 263- <br />
+          наб. Принсенграхт 263- 
           265, Амстердам
         </p>
       </address>
