--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         />
       </a>
       <address class="address header__address">
-       <a href="tel:+99995555555">+9 999 555 5555</a>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
@@ -65,7 +65,7 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link" href="#"
+            <a class="card-link" href="#0"
               ><article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -80,7 +80,7 @@
             >
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#"
+            <a class="card-link" href="#0"
               ><article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -148,10 +148,7 @@
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>
-          наб. Принсенграхт 263- 
-          265, Амстердам
-        </p>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -161,10 +158,10 @@
             >
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">Посмотреть лоты</a>
+            <a class="footer__menu-link" href="#0">Посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">об аукционе</a>
+            <a class="footer__menu-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
